--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -762,7 +762,7 @@
     <string name="info_progress_x_percent">%1$d%% lettura</string>
     <string name="info_progress_page_x_of_y">In lettura\nPagina: %1$d di %2$d</string>
     <string name="lbl_track_progress_long">Traccia i tuoi progressi</string>
-    <string name="lbl_total_pages">Totale</string>
+    <string name="lbl_total_pages">Pagine totali</string>
     <string name="lbl_percentage_read">% lettura</string>
     <string name="lbl_track_progress">Progressi</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Deve essere maggiore o uguale alla pagina corrente</string>
