--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -778,7 +778,7 @@
     <string name="info_progress_x_percent">%1$d%% přečteno</string>
     <string name="info_progress_page_x_of_y">Čtení\nStránka: %1$d z %2$d</string>
     <string name="lbl_track_progress_long">Sledujte svůj pokrok</string>
-    <string name="lbl_total_pages">Celkem</string>
+    <string name="lbl_total_pages">Celkem stránek</string>
     <string name="lbl_track_progress">Pokrok</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Musí být větší nebo stejná jako aktuální stránka</string>
 </resources>
