--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -759,7 +759,7 @@
     <string name="info_progress_x_percent">%1$d%% gelesen</string>
     <string name="info_progress_page_x_of_y">Am Lesen\nSeite: %1$d von %2$d</string>
     <string name="lbl_track_progress_long">Verfolgen Sie Ihren Fortschritt</string>
-    <string name="lbl_total_pages">Gesamt</string>
+    <string name="lbl_total_pages">Seiten insgesamt</string>
     <string name="lbl_track_progress">Fortschritt</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Muss größer oder gleich der aktuellen Seite sein</string>
 </resources>
