--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -759,7 +759,7 @@
     <string name="info_progress_x_percent">%1$d%% διάβασμα</string>
     <string name="info_progress_page_x_of_y">Ανάγνωση\nΣελίδα: %1$d από %2$d</string>
     <string name="lbl_track_progress_long">Παρακολουθήστε την πρόοδό σας</string>
-    <string name="lbl_total_pages">Σύνολο</string>
+    <string name="lbl_total_pages">Σύνολο σελίδων</string>
     <string name="lbl_percentage_read">% διάβασμα</string>
     <string name="lbl_track_progress">Πρόοδος</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Πρέπει να είναι μεγαλύτερη ή ίση με την τρέχουσα σελίδα</string>
