--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -778,7 +778,7 @@
     <string name="info_progress_x_percent">%1$d%% читать</string>
     <string name="info_progress_page_x_of_y">Читаю\nСтраница: %1$d из %2$d</string>
     <string name="lbl_track_progress_long">Отслеживайте свой прогресс</string>
-    <string name="lbl_total_pages">Всего</string>
+    <string name="lbl_total_pages">Всего страниц</string>
     <string name="lbl_percentage_read">% читать</string>
     <string name="lbl_track_progress">Прогресс</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Должна быть больше или равна текущей странице</string>
