--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -769,7 +769,7 @@
     <string name="info_progress_x_percent">okunan %%%1$d</string>
     <string name="info_progress_page_x_of_y">Okunan\nSayfa: %1$d / %2$d</string>
     <string name="lbl_track_progress_long">İlerlemenizi takip edin</string>
-    <string name="lbl_total_pages">Toplam</string>
+    <string name="lbl_total_pages">Toplam sayfa</string>
     <string name="lbl_track_progress">İlerleme</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Geçerli sayfadan büyük veya eşit olmalıdır</string>
 </resources>
