--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1681,8 +1681,7 @@
 
     <!-- Reading progress: Field label / Dialog title. -->
     <string name="lbl_track_progress_long">Track your progress</string>
-    <!-- Reading progress: Field label / Dialog title. Short for "Track your progress"
-         URGENT: lbl_track_progress must be improved. -->
+    <!-- Reading progress: Field label / Dialog title. Short for "Track your progress" -->
     <string name="lbl_track_progress">Progress</string>
 
     <!-- Editing Reading progress: Button Label: reading-progress is a percentage. -->
