--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -763,7 +766,7 @@
     <string name="lbl_author_type_lettering">Letras</string>
     <string name="lbl_percentage">Porcentaje</string>
     <string name="lbl_current_page">Página actual</string>
-    <string name="btn_finished">Completado</string>
+    <string name="btn_completed">Completado</string>
     <string name="ps_use_read_progress_off">Utilice un simple estado de leído/no leído.</string>
     <string name="ps_use_read_progress_on">Siga el progreso en porcentaje o número de página.</string>
     <string name="lbl_percentage_read">% leído</string>
