--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
@@ -753,7 +756,7 @@
     <string name="lbl_author_type_lettering">Lettering</string>
     <string name="lbl_percentage">Percentuale</string>
     <string name="lbl_current_page">Pagina corrente</string>
-    <string name="btn_finished">Completato</string>
+    <string name="btn_completed">Completato</string>
     <string name="ps_use_read_progress_off">Utilizzare un semplice stato di lettura/non lettura.</string>
     <string name="ps_use_read_progress_on">Traccia l\'avanzamento in percentuale o in numero di pagina.</string>
     <string name="info_progress_x_percent">%1$d%% lettura</string>
