--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -772,7 +775,7 @@
     <string name="lbl_author_type_lettering">Lettering</string>
     <string name="lbl_percentage">Procent</string>
     <string name="lbl_current_page">Bieżąca strona</string>
-    <string name="btn_finished">Zakończony</string>
+    <string name="btn_completed">Zakończony</string>
     <string name="ps_use_read_progress_off">Użyj prostego statusu Przeczytane/Nieprzeczytane.</string>
     <string name="ps_use_read_progress_on">Śledź postępy w procentach lub liczbie stron.</string>
     <string name="info_progress_x_percent">%1$d%% czytaj</string>
