--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes “…”  - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -437,7 +440,7 @@
     <string name="X_info_not_authorized">违例</string>
     <string name="lbl_percentage">百分比</string>
     <string name="lbl_current_page">当前页面</string>
-    <string name="btn_finished">已完成</string>
+    <string name="btn_completed">已完成</string>
     <string name="lbl_total_pages">总页数</string>
     <string name="ps_use_read_progress_off">使用简单的已读/未读状态。</string>
     <string name="ps_use_read_progress_on">以百分比或页码跟踪进度。</string>
