--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -981,7 +981,7 @@
     <string name="lbl_covers">Covers</string>
     <!-- Multiple book covers. Long label. -->
     <string name="lbl_covers_long">Cover images</string>
-    <!-- number of pages; this is a field-label. -->
+    <!-- number of pages; this is a field-label + also used for a radio button text. -->
     <string name="lbl_pages">Pages</string>
     <!-- number of pages; this is formatted text. -->
     <string name="info_x_pages"
@@ -1674,20 +1674,24 @@
             translatable="false">Normalize publisher names (EXPERIMENTAL, see Help)</string>
 
 
+    <!-- Preference category : "Reading Progress" options. -->
+    <string name="pc_reading"
+            translatable="false">@string/lbl_reading</string>
     <!-- SwitchPreference : Reading Progress: use the traditional Read/Unread checkbox style. -->
     <string name="ps_use_read_progress_off">Use a simple Read/Unread status.</string>
     <!-- SwitchPreference : Reading Progress: use the extended progress options. -->
     <string name="ps_use_read_progress_on">Track progress in percentage or page number.</string>
 
-    <!-- Reading progress: Field label / Dialog title. -->
+    <!-- Reading progress:  Dialog title / preference option. -->
     <string name="lbl_track_progress_long">Track your progress</string>
-    <!-- Reading progress: Field label / Dialog title. Short for "Track your progress" -->
+    <!-- Reading progress: Field label. Short for "Track your progress" -->
     <string name="lbl_track_progress">Progress</string>
 
-    <!-- Editing Reading progress: Button Label: reading-progress is a percentage. -->
+    <!-- Editing Reading progress: Radio button text: reading-progress is a percentage. -->
     <string name="lbl_percentage">Percentage</string>
+
     <!-- Editing Reading progress: Button label: the user finished reading a book. -->
-    <string name="btn_finished">Completed</string>
+    <string name="btn_completed">Completed</string>
 
     <!-- Editing Reading progress: Field label; reading-progress in percent. -->
     <string name="lbl_percentage_read">% read</string>
