--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -757,7 +757,7 @@
     <string name="ps_use_read_progress_off">Verwenden Sie einen einfachen Gelesen/Ungelesen-Status.</string>
     <string name="ps_use_read_progress_on">Verfolgen Sie den Fortschritt in Prozent oder Seitenzahl.</string>
     <string name="info_progress_x_percent">%1$d%% gelesen</string>
-    <string name="info_progress_page_x_of_y">Am Lesen\nSeite: %1$d von %2$d</string>
+    <string name="info_progress_page_x_of_y">Seite: %1$d von %2$d</string>
     <string name="lbl_track_progress_long">Verfolgen Sie Ihren Fortschritt</string>
     <string name="lbl_total_pages">Seiten insgesamt</string>
     <string name="lbl_track_progress">Fortschritt</string>
