--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -757,7 +757,7 @@
     <string name="ps_use_read_progress_off">Χρησιμοποιήστε μια απλή κατάσταση Ανάγνωση/Δεν έχει διαβαστεί.</string>
     <string name="ps_use_read_progress_on">Παρακολουθήστε την πρόοδο σε ποσοστό ή αριθμό σελίδας.</string>
     <string name="info_progress_x_percent">%1$d%% διάβασμα</string>
-    <string name="info_progress_page_x_of_y">Ανάγνωση\nΣελίδα: %1$d από %2$d</string>
+    <string name="info_progress_page_x_of_y">Σελίδα: %1$d από %2$d</string>
     <string name="lbl_track_progress_long">Παρακολουθήστε την πρόοδό σας</string>
     <string name="lbl_total_pages">Σύνολο σελίδων</string>
     <string name="lbl_percentage_read">% διάβασμα</string>
