--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -757,7 +757,7 @@
     <string name="ps_use_read_progress_off">Gebruik een eenvoudige status Lezen/Niet gelezen.</string>
     <string name="ps_use_read_progress_on">Volg de vooruitgang in percentage of paginanummer.</string>
     <string name="info_progress_x_percent">%1$d%% gelezen</string>
-    <string name="info_progress_page_x_of_y">Aan het lezen\nPagina: %1$d van %2$d</string>
+    <string name="info_progress_page_x_of_y">Pagina: %1$d van %2$d</string>
     <string name="lbl_track_progress_long">Volg je vooruitgang</string>
     <string name="lbl_total_pages">Aantal pagina\'s</string>
     <string name="lbl_track_progress">Vooruitgang</string>
