--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -785,7 +785,7 @@
     <string name="ps_use_read_progress_off">Utilize um simples estado Lido/Não lido.</string>
     <string name="ps_use_read_progress_on">Acompanhe o progresso em percentagem ou número de página.</string>
     <string name="info_progress_x_percent">%1$d%% ler</string>
-    <string name="info_progress_page_x_of_y">A ler\nPágina: %1$d de %2$d</string>
+    <string name="info_progress_page_x_of_y">Página: %1$d de %2$d</string>
     <string name="lbl_track_progress_long">Acompanhe o seu progresso</string>
     <string name="lbl_total_pages">Total de páginas</string>
     <string name="lbl_percentage_read">% ler</string>
