--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1714,7 +1714,7 @@
          The user is reading this book, and they are on page "x of y"
          param1: x: current page;
          param2: y: total number of pages. -->
-    <string name="info_progress_page_x_of_y">Reading\nPage: %1$d of %2$d</string>
+    <string name="info_progress_page_x_of_y">Page: %1$d of %2$d</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 
