--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -763,4 +763,5 @@
     <string name="lbl_percentage_read">% διάβασμα</string>
     <string name="lbl_track_progress">Πρόοδος</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Πρέπει να είναι μεγαλύτερη ή ίση με την τρέχουσα σελίδα</string>
+    <string name="info_builtin_style_asterix">(* προεπιλεγμένα στυλ)</string>
 </resources>
