--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -776,4 +776,5 @@
     <string name="lbl_total_pages">Total de páginas</string>
     <string name="lbl_track_progress_long">Seguimiento del progreso</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Debe ser mayor o igual que la página actual</string>
+    <string name="info_builtin_style_asterix">(* estilos predeterminados)</string>
 </resources>
