--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -762,4 +762,5 @@
     <string name="lbl_total_pages">Aantal pagina\'s</string>
     <string name="lbl_track_progress">Vooruitgang</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Moet groter of gelijk zijn aan de huidige pagina</string>
+    <string name="info_builtin_style_asterix">(* standaard stijlen)</string>
 </resources>
