--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -540,6 +540,9 @@
     <string name="style_type_builtin">Builtin</string>
     <!-- Style type -->
     <string name="style_type_user_defined">User-defined</string>
+    <!-- Info text above a list of styles. -->
+    <string name="info_builtin_style_asterix">(* default styles)</string>
+
     <!-- endregion -->
     <!-- region ========== Booklist Group names. -->
     <!-- Booklist Group name -->
@@ -1716,8 +1719,6 @@
          param1: x: current page;
          param2: y: total number of pages. -->
     <string name="info_progress_page_x_of_y">Page: %1$d of %2$d</string>
-
-    <string name="info_builtin_style_asterix">(*=default style)</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 
